--- a/moon-user-center/src/main/resources/application-dev.yaml
+++ b/moon-user-center/src/main/resources/application-dev.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8083
 
 feign:
   sentinel:
@@ -30,11 +30,12 @@ spring:
   cloud:
     # 限流、流量整形、熔断降级、系统负载保护
     nacos:
-      server-addr: 127.0.0.1:8848
-      # 设置元数据
-      metadata:
-        instance: hello-metadata
-        version: v1
+      discovery:
+        server-addr: 127.0.0.1:8848
+        # 设置元数据
+  #      metadata:
+  #        instance: hello-metadata
+  #        version: v1
 
     # 流量控制、熔断降级、系统负载保护
     sentinel:
@@ -44,4 +45,14 @@ spring:
 
 logging:
   config: classpath:logback-spring.xml
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
+
    
