分享模块：审核分享文章

--- a/moon-content-center/src/main/resources/application-dev.yaml
+++ b/moon-content-center/src/main/resources/application-dev.yaml
@@ -10,15 +10,16 @@ spring:
     add-mappings: true
 
   datasource:
+    # 连接mysql数据库
     url: jdbc:mysql://127.0.0.1:3306/dev_microservice_action?setUnicode=true&characterEncoding=utf8
     hikari:
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: root
       password: 123456
       # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上
-      maxLifetime: 1765000
+      max-lifetime: 1765000
       # 连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
-      maximumPoolSize: 15
+      maximum-pool-size: 15
 
   cloud:
     # 限流、流量整形、熔断降级、系统负载保护
@@ -44,6 +45,14 @@ spring:
         dashboard: 127.0.0.1:8080
         # 默认8719端口，假如被占用会自动从8719开始一次+1扫描，直至找到未被占用的端口
         port: 8719
+
+  # Rabbit MQ 配置
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    virtual-host: my_vhost
+    username: admin
+    password: 123456
 
 # 配置用户中心的负载均衡规则
 #user-center:
