--- a/moon-content-center/src/main/resources/application-dev.yaml
+++ b/moon-content-center/src/main/resources/application-dev.yaml
@@ -16,10 +16,19 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: root
       password: 123456
-      # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上
-      max-lifetime: 1765000
-      # 连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
+      # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException，默认：30秒
+      connection-timeout: 30000
+      # 最小连接数
+      minimum-idle: 5
+      # 连接池中允许的最大连接数。默认：10；推荐的公式：((core_count * 2) + effective_spindle_count)
       maximum-pool-size: 15
+      # 自动提交
+      auto-commit: true
+      # 连接超时的最大时长（毫秒），超时则被释放（retired），默认：10分钟
+      idle-timeout: 600000
+      # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认:30分钟，建议设置比数据库超时时长少30秒以上
+      max-lifetime: 1800000
+      connection-test-query: SELECT 1
 
   cloud:
     # 限流、流量整形、熔断降级、系统负载保护
