--- a/moon-content-center/src/main/resources/application-dev.yaml
+++ b/moon-content-center/src/main/resources/application-dev.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 8081
-
 spring:
   application:
     name: content-center
@@ -21,7 +18,7 @@ spring:
       # 最小连接数
       minimum-idle: 5
       # 连接池中允许的最大连接数。默认：10；推荐的公式：((core_count * 2) + effective_spindle_count)
-      maximum-pool-size: 15
+      maximum-pool-size: 20
       # 自动提交
       auto-commit: true
       # 连接超时的最大时长（毫秒），超时则被释放（retired），默认：10分钟
@@ -62,6 +59,13 @@ spring:
     virtual-host: my_vhost
     username: admin
     password: 123456
+
+# mybatis配置
+mybatis:
+  # 所有实体类所在包路径
+  type-aliases-package: com.moon.content.center.module.domain
+  # mapper映射文件
+  mapper-locations: classpath:mapper/*.xml
 
 # 配置用户中心的负载均衡规则
 #user-center:
