--- a/moon-user-center/src/main/resources/application-dev.yaml
+++ b/moon-user-center/src/main/resources/application-dev.yaml
@@ -1,10 +1,3 @@
-server:
-  port: 8083
-
-feign:
-  sentinel:
-    enabled: true
-
 spring:
   application:
     name: user-center
@@ -27,7 +20,7 @@ spring:
       # 最小连接数
       minimum-idle: 5
       # 连接池中允许的最大连接数。默认：10；推荐的公式：((core_count * 2) + effective_spindle_count)
-      maximum-pool-size: 15
+      maximum-pool-size: 20
       # 自动提交
       auto-commit: true
       # 连接超时的最大时长（毫秒），超时则被释放（retired），默认：10分钟
@@ -60,6 +53,17 @@ spring:
     virtual-host: my_vhost
     username: admin
     password: 123456
+
+# mybatis配置
+mybatis:
+  # 所有实体类所在包路径
+  type-aliases-package: com.moon.user.center.module.domain
+  # mapper映射文件
+  mapper-locations: classpath:mapper/*.xml
+
+feign:
+  sentinel:
+    enabled: true
 
 
    
