--- a/moon-user-center/src/main/resources/application-prod.yaml
+++ b/moon-user-center/src/main/resources/application-prod.yaml
@@ -1,10 +1,3 @@
-server:
-  port: 8083
-
-feign:
-  sentinel:
-    enabled: true
-
 spring:
   application:
     name: user-center
@@ -39,3 +32,14 @@ spring:
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848
+
+# mybatis配置
+mybatis:
+  # 所有实体类所在包路径
+  type-aliases-package: com.moon.user.center.module.domain
+  # mapper映射文件
+  mapper-locations: classpath:mapper/*.xml
+
+feign:
+  sentinel:
+    enabled: true
