--- a/moon-user-center/pom.xml
+++ b/moon-user-center/pom.xml
@@ -63,6 +63,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
 
       <!--  <dependency>
             <groupId>org.apache.rocketmq</groupId>
