--- a/moon-user-center/src/main/resources/application-dev.yaml
+++ b/moon-user-center/src/main/resources/application-dev.yaml
@@ -29,7 +29,6 @@ spring:
       max-lifetime: 1800000
       connection-test-query: SELECT 1
 
-
   cloud:
     # 限流、流量整形、熔断降级、系统负载保护
     nacos:
@@ -46,13 +45,42 @@ spring:
         # 指定sentinel控制台地址
         dashboard: 127.0.0.1:8080
 
+    stream:
+      binders:
+        rabbit_cluster:
+          type: rabbit
+          environment:
+            spring:
+              rabbitmq:
+                host: 127.0.0.1
+                port: 5672
+                username: admin
+                password: 123456
+                virtual-host: my_vhost
+      bindings:
+        input_channel:
+          destination: exchange-content
+          group: queue-content
+          binder: rabbit_cluster
+          consumer:
+            concurrency: 1
+      rabbit:
+        bindings:
+          input_channel:
+            consumer:
+              requeueRejected: false
+              acknowledgeMode: MANUAL
+              recoveryInterval: 3000
+              durableSubscription: true
+              maxConcurrency: 5
+
   # Rabbit MQ 配置
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    virtual-host: my_vhost
-    username: admin
-    password: 123456
+#  rabbitmq:
+#    host: 127.0.0.1
+#    port: 5672
+#    virtual-host: my_vhost
+#    username: admin
+#    password: 123456
 
 # mybatis配置
 mybatis:
@@ -64,6 +92,13 @@ mybatis:
 feign:
   sentinel:
     enabled: true
+  httpclient:
+    # 让feign使用apache httpclient做请求；而不是默认的urlconnection
+    enabled: true
+    # feign的最大连接数
+    max-connections: 200
+    # feign单个路径的最大连接数
+    max-connections-per-route: 50
 
 
-   
+
